# sqlstack

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: pre-build.py
src/app/: __init__.py  __main__.py  asgi.py
src/app/db/migrations/: 01-initial.sql
src/app/domain/: plugins.py
src/app/lib/: exceptions.py
src/server/app/: __main__.py  asgi.py
src/server/app/contrib/aiosql/: __init__.py  manager.py  plugin.py
src/server/app/contrib/asyncpg/: __init__.py  config.py  plugin.py
src/server/app/contrib/socketify/: __init__.py  cli.py  plugin.py
src/server/app/domain/: __init__.py  plugins.py
src/server/app/domain/system/: controllers.py  schemas.py
src/server/app/lib/: exceptions.py
tests/: test_litestar.py
